call-center/src/objects/Charge_Group__c.object
<CustomObject>
    <description>Charge Group details</description>
    <fields>
        <fullName>Account_Status__c</fullName>
        <description>ChargeGroupStatus.preinvoiced</description>
        <label>Account Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Sub_Status__c</fullName>
        <label>Account Sub Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>Account Type</description>
        <label>Account Type</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if active account</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balance_Discrepancy__c</fullName>
        <description>Is True when Reported Selfpay Balance is not equal to Balance.</description>
        <formula>Reported_Selfpay_Balance__c  &lt;&gt;  Balance__c</formula>
        <label>Balance Discrepancy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balance_Mismatch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>balance did not match selfpay balance in inv/rcl/atb import</description>
        <label>Balance Mismatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <summarizedField>Transaction__c.Amount__c</summarizedField>
        <summaryForeignKey>Transaction__c.Charge_Group__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Charge_Group_External_Id__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used for integration</description>
        <label>Charge Group External ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Of_Service_End_Date__c</fullName>
        <description>Date Of Service End Date</description>
        <label>Date Of Service End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Service_Start_Date__c</fullName>
        <description>Date Of Service Start Date</description>
        <label>Date Of Service Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Encounter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A Chargegroup can only have one encounter; multiple chargegroups can have the same encounter</description>
        <label>Encounter</label>
        <referenceTo>Encounter__c</referenceTo>
        <relationshipLabel>Charge Groups</relationshipLabel>
        <relationshipName>Charge_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Guarantor_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Guarantor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>External Guarantor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Charge Groups (External Guarantor ID)</relationshipLabel>
        <relationshipName>Charge_Groups2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>Account Number</description>
        <externalId>true</externalId>
        <label>Account Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Class__c</fullName>
        <description>Financial Class</description>
        <label>Financial Class</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor__c</fullName>
        <label>Guarantor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Guarantor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Charge Groups (Guarantor)</relationshipLabel>
        <relationshipName>Charge_Groups</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Has_Bad_Debt_Balance__c</fullName>
        <formula>AND(Account_Status__c = &quot;Billed&quot;, Account_Sub_Status__c = &quot;Bad Debt&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Bad Debt Balance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Credit_Balance__c</fullName>
        <formula>AND(Account_Status__c = &apos;Billed&apos;, Account_Sub_Status__c = &apos;Credit&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Credit Balance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Delinquent_Balance__c</fullName>
        <formula>AND(Account_Status__c = &quot;Billed&quot;, Account_Sub_Status__c = &quot;Delinquent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Delinquent Balance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Due_Balance__c</fullName>
        <formula>AND(Account_Status__c = &quot;Billed&quot;, Account_Sub_Status__c = &quot;Due By&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Due Balance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Invoiced_Balance__c</fullName>
        <description>This function returns TRUE if this Charge Group balance is viewed as &quot;Invoiced.&quot;</description>
        <formula>AND(Account_Status__c = &quot;Billed&quot;,
  IF (CASE(Account_Sub_Status__c,
    &quot;Due By&quot;, 1,
    &quot;On Payment Plan&quot;, 1,
    &quot;Overdue&quot;, 1,
    &quot;Delinquent&quot;, 1,
    &quot;Credit&quot;, 1,
    0) == 1, TRUE, FALSE))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Invoiced Balance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Overdue_Balance__c</fullName>
        <formula>AND(Account_Status__c = &quot;Billed&quot;, Account_Sub_Status__c = &quot;Overdue&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Overdue Balance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Payment_Plan_Balance__c</fullName>
        <formula>AND(Account_Status__c = &quot;Billed&quot;, Account_Sub_Status__c = &quot;On Payment Plan&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Payment Plan Balance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Pre_Invoiced_Balance__c</fullName>
        <formula>AND(Account_Status__c = &quot;Billed&quot;, Account_Sub_Status__c = &quot;Pre-Invoiced&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Pre-Invoiced Balance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>In_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>whether the account is present in the inventory file</description>
        <label>In Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactivation_Date__c</fullName>
        <description>Inactivation Date</description>
        <label>Inactivation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inactivation_Flags__c</fullName>
        <description>Flags for inactivation of account</description>
        <label>Inactivation Flags</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Age__c</fullName>
        <formula>If(ISBLANK(Invoice__c),-1,Invoice__r.Age__c)</formula>
        <label>Invoice Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Charge Groups</relationshipLabel>
        <relationshipName>Charge_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Charge Groups</relationshipLabel>
        <relationshipName>Charge_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Newly_Imported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Newly Imported</description>
        <label>Newly Imported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>cannot delete</description>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OG_Balance__c</fullName>
        <description>Chargegroup balance at time chargegroup becomes Billed</description>
        <label>OG Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Origin_Code__c</fullName>
        <description>Origin Code of the source hospital</description>
        <label>Origin Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Subcode__c</fullName>
        <description>PAS Specifc OriginCode</description>
        <label>Origin Subcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Patient</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Charge Groups (Patient)</relationshipLabel>
        <relationshipName>Charge_Groups_Patient</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Paymentplan ID</description>
        <label>Payment Plan</label>
        <referenceTo>Payment_Plan__c</referenceTo>
        <relationshipLabel>Charge Groups</relationshipLabel>
        <relationshipName>Charge_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_Collection_History__c</fullName>
        <label>Pre Collection History</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Collection_Sent__c</fullName>
        <description>Date pre-collections notice was sent (if applicable).</description>
        <label>Pre Collection Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ProcessRollupBatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process Rollup Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider</label>
        <referenceTo>Provider__c</referenceTo>
        <relationshipLabel>Charge Groups</relationshipLabel>
        <relationshipName>Charge_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReCalculate_Fields__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Re-Calculate Fields?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reported_Bad_Debt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reported Bad Debt</description>
        <label>Reported Bad Debt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reported_Insurance_Balance__c</fullName>
        <description>Reported Insurance Balance</description>
        <label>Reported Insurance Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reported_Prebill_Balance__c</fullName>
        <description>Reported Prebill Balance</description>
        <label>Reported Prebill Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reported_Selfpay_Balance__c</fullName>
        <label>Reported Selfpay Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SelfPay_Bucket__c</fullName>
        <description>SelfPay Bucket</description>
        <label>SelfPay Bucket</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sirono_Assigned_Date__c</fullName>
        <description>Date assigned to Sirono</description>
        <label>Sirono Assigned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sirono_Id__c</fullName>
        <description>This is the external Charge Group iD</description>
        <externalId>true</externalId>
        <label>ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sub_Status_Index__c</fullName>
        <formula>IF(Balance__c = 0, 4,
CASE(Account_Sub_Status__c,
&quot;Delinquent&quot;, 9,
&quot;Overdue&quot;, 8,
&quot;Due By&quot;, 7,
&quot;Due&quot;, 7,
&quot;On Payment Plan&quot;, 6,
&quot;Payment Plan&quot;, 6,
&quot;Credit&quot;, 5,
&quot;Paid&quot;, 4,
&quot;Bad Debt&quot;, 3,
&quot;Unknown&quot;, 2,
&quot;Inactive&quot;, 1,
0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Substatus Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Charge Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Invoice__c</columns>
        <columns>Guarantor__c</columns>
        <columns>Patient__c</columns>
        <columns>Date_Of_Service_Start_Date__c</columns>
        <columns>Date_Of_Service_End_Date__c</columns>
        <columns>Location__c</columns>
        <columns>Payment_Plan__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charge Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>